Update ActionJav parser profile and add new set of unit tests for it